--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,41 @@ body, html {
   height: 100%;
   width: 100%;
   background-color: #000;
+  font-family: Tahoma, sans-serif;
 }
 
-div#banner {
+/* COLORS
+orange: #e47725
+light-orange: #eca167;
+*/
+
+div.section {
+  width: 100%;
+  text-align: center;
+}
+
+div.section#first {
   background-image: url(../img/banner.jpg);
   background-position: center center;
   background-repeat: no-repeat;
-  width: 100%;
   height: 100%;
+}
+
+div.section#infos div.block {
+  margin: 20px;
+  padding: 10px 20px;
+}
+div.section#infos div.large_text {
+  display: inline-block;
+  background-color: #e47725;
+  font-size: 70px;
+}
+div.section#infos div.larger_text {
+  display: inline-block;
+  background-color: #e47725;
+  font-size: 100px;
+}
+div.section#infos div.large_text span {
+  font-size: 20px;
+  display: block;
 }
