--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,12 @@ div.section#referenten div.referent {
 div.section#referenten div.referent div.referent_left {
   float: left;
   width: 300px;
+  height: 300px;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-position: center center;
 }
 div.section#referenten div.referent div.referent_right {
   margin-left: 320px;
@@ -123,7 +129,8 @@ div.section#referenten div.referent div.referent_right b {
   font-size: 34px;
   border-bottom: solid 2px #000;
   padding: 0px 5px;
-  margin-left: -5px;
+  width: 100%;
+  display: block;
 }
 
 @media screen and (max-width: 800px) {
@@ -135,12 +142,18 @@ div.section#referenten div.referent div.referent_right b {
 }
 
 @media screen and (max-width: 650px) {
+  div.section#referenten div.referent {
+    margin: 20px 20px;
+  }
   div.section#referenten div.referent div.referent_left {
     float: none;
     width: 100%;
+    height: 400px;
   }
   div.section#referenten div.referent div.referent_right {
-    text-align: center;
     margin-left: 0px;
+  }
+  div.section#referenten div.referent div.referent_right b {
+    font-size: 54px;
   }
 }
