--- a/css/style.css
+++ b/css/style.css
@@ -38,16 +38,13 @@ div.section#first div#banner {
   position: absolute;
   left: 50%;
   top: 50%;
-  background-image: url(../img/banner.jpg);
+  background-image: url(../img/banner.png);
   background-position: center center;
   background-repeat: no-repeat;
-  width: 800px;
-  height: 520px;
-  margin-left: -400px;
-  margin-top: -260px;
-  -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,1);
-  -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,1);
-  box-shadow: 0px 0px 25px 0px rgba(0,0,0,1);
+  width: 650px;
+  height: 850px;
+  margin-left: -325px;
+  margin-top: -425px;
 }
 div.section#first div#scroll_down {
   position: absolute;
@@ -81,6 +78,13 @@ h1 {
 h2 {
   font-size: 80px;
 }
+.small {
+  font-size: 20px;
+}
+.bg_black {
+  background-color: #000;
+  padding: 5px 10px;
+}
 
 .text.white {
   color: #fff;
@@ -93,10 +97,19 @@ h2 {
 }
 
 div.section#infos div#where {
-  background-color: #000;
+  background-image: url('../img/fliegerhalle.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   color: #fff;
   font-size: 40px;
   padding: 20px;
+  -moz-box-shadow: inset 0 0 20px #000000;
+  -webkit-box-shadow: inset 0 0 20px #000000;
+  box-shadow: inset 0 0 20px #000000;
 }
 
 div.section#referenten div.referent {
@@ -131,6 +144,33 @@ div.section#referenten div.referent div.referent_right b {
   padding: 0px 5px;
   width: 100%;
   display: block;
+}
+div.section#zeiten div.times ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+div.section#zeiten div.times ul li {
+  text-align: center;
+  font-size: 30px;
+  color: #fff;
+}
+
+div#logo {
+  background-image: url(../img/logo.png);
+  width: 150px;
+  height: 150px;
+  position: fixed;
+  bottom: -8px;
+  right: -8px;
+}
+div#social {
+  position: absolute;
+  top: 25px;
+  right: 10px;
+}
+div#social a {
+  margin-right: 25px;
 }
 
 @media screen and (max-width: 800px) {
