--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,34 @@ div.section#infos div#where {
   box-shadow: inset 0 0 20px #000000;
 }
 
+div.section#news div.news {
+  padding: 20px;
+  overflow: auto;
+  max-width: 600px;
+  margin: 10px auto;
+  background-color: #fff;
+  text-align: left;
+  -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,1);
+  -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,1);
+  box-shadow: 0px 0px 25px 0px rgba(0,0,0,1);
+}
+div.section#news div.news h3 {
+  font-size: 36px;
+  border-bottom: solid 1px #000;
+  text-shadow: none;
+}
+div.section#news div.news p a {
+  display: inline-block;
+  padding: 5px 15px;
+  margin: 5px 5px 5px 0px;
+  border: solid 1px #000;
+  color: #000;
+  text-decoration: none;
+}
+div.section#news div.news p a:hover {
+  background-color: #e47725;
+}
+
 div.section#referenten div.referent {
   padding: 20px;
   overflow: auto;
