--- a/css/style.css
+++ b/css/style.css
@@ -134,12 +134,14 @@ div.section#news div.news {
   overflow: auto;
   max-width: 600px;
   margin: 10px auto;
-  background-color: #fff;
+  background-color: #000;
+  color: #fff;
   text-align: left;
   -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,1);
   -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,1);
   box-shadow: 0px 0px 25px 0px rgba(0,0,0,1);
   font-family: sans-serif;
+  border: solid 1px #bd2328;
 }
 div.section#news div.news h3 {
   font-size: 36px;
@@ -156,12 +158,6 @@ div.section#news div.news p a {
 }
 div.section#news div.news p a:hover {
   background-color: #bd2328;
-}
-div.section#news div.news.flyer {
-  background-color: #000;
-  text-align: center;
-  color: #bd2328;
-  border: solid 1px #bd2328;
 }
 
 div.section#referenten div.referent {
