--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,9 @@ div.section#first div#scroll_down a {
 div.section#first div#scroll_down a:hover {
   color: #fff;
 }
+div#news {
+  margin-bottom: 150px;
+}
 
 h1, h2, h3 {
   font-family: 'dk_kaikouraregular', sans-serif;
