--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,23 @@ div.section#zeiten div.times ul li {
   font-size: 30px;
   color: #fff;
 }
+div.section#datenschutz {
+  color: #fff;
+  font-family: Arial, sans-serif;
+}
+div#footer {
+  background-color: #000;
+  width: 100%;
+  padding: 5px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
+div#footer a {
+  font-size: 16px;
+  color: #aaa;
+  font-family: Arial, sans-serif;
+}
 
 div#logo {
   background-image: url(../img/logo.png);
