--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,8 @@ h1, h2, h3 {
   font-family: 'dk_kaikouraregular', sans-serif;
   padding: 0px;
   margin: 0px;
+}
+h1, h2 {
   text-shadow: 4px 4px 4px #000;
 }
 h1 {
@@ -168,30 +170,24 @@ div.section#referenten div.referent {
   -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,1);
   -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,1);
   box-shadow: 0px 0px 25px 0px rgba(0,0,0,1);
+  font-family: sans-serif;
 }
-div.section#referenten div.referent div.referent_left {
-  float: left;
-  width: 300px;
-  height: 300px;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-position: center center;
+div.section#referenten div.referent h3 {
+  font-size: 36px;
 }
-div.section#referenten div.referent div.referent_right {
-  margin-left: 320px;
-  text-align: left;
-  font-size: 24px;
+div.section#referenten div.referent a {
+  display: inline-block;
+  padding: 5px 15px;
+  color: #fff;
+  background-color: #000;
+  text-decoration: none;
+  transition: box-shadow 0.5s ease-in-out, background-color 0.5s;
 }
-div.section#referenten div.referent div.referent_right b {
-  font-family: 'amatic_scregular', sans-serif;
-  font-size: 34px;
-  border-bottom: solid 2px #000;
-  padding: 0px 5px;
-  width: 100%;
-  display: block;
+div.section#referenten div.referent a:hover {
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,1);
+  background-color: #bd2328;
 }
+
 div.section#zeiten div.times ul {
   list-style-type: none;
   margin: 0;
