--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,15 @@ div.section {
   text-align: center;
 }
 
+@keyframes heartbeat {
+  0% {background-size: 50%;}
+  20% {background-size: 51%;}
+  40% {background-size: 50%;}
+  60% {background-size: 51%;}
+  80% {background-size: 50%;}
+  100% {background-size: 50%;}
+}
+
 div.section#first {
   height: 100%;
   position: relative;
@@ -48,6 +57,10 @@ div.section#first {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: 50%;
+  animation-name: heartbeat;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
 }
 div.section#first div#scroll_down {
   position: absolute;
